--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,26 @@
 .navbar{
     background-color:var(--theme) ;
+    padding: 1rem 1rem;
+    position: sticky;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    color: var(--white);
+    font-weight: 500;
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+.link{
+    opacity: 0.8;
+    cursor: pointer;
+}
+.link:hover{
+    opacity: 1;
+    transition: all 3s;
 }
